force-app/main/default/objects/courseCap__c/courseCap__c.object-meta.xml
<CustomObject>
    <label>courseCap</label>
    <nameField>
        <label>course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>course</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>