force-app/main/default/objects/courseCap__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>IF(   fee__c &gt;=5000 , CreatedDate +2, CreatedDate 
    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>