force-app/main/default/objects/courseCap__c/fields/fee__c.field-meta.xml
<CustomField>
    <fullName>fee__c</fullName>
    <label>fee</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>