force-app/main/default/objects/courseCap__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>coursename</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>