force-app/main/default/objects/courseCap__c/listViews/BanTeam_courseCap.listView-meta.xml
<ListView>
    <fullName>BanTeam_courseCap</fullName>
    <filterScope>Queue</filterScope>
    <label>BanTeam</label>
    <queue>BanTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>